k8s/wisecow-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
  namespace: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: zayn63/wisecow-app:latest   # your app image
        imagePullPolicy: Always
        ports:
        - containerPort: 4499
